samples/_failures_safe/1761078332_080e91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b622461e.c: In function ‘tokenize’:
./samples/SAFE/__tmp_b622461e.c:168:5: error: expected expression at end of input
  168 |     while (lexer->input[lexer->position] !=
      |     ^~~~~
./samples/SAFE/__tmp_b622461e.c:168:5: error: expected declaration or statement at end of input
